# ticketing-system

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: infra-shared.yml  infra-uksouth.yml
app/api/: .env.example  README.md  pyproject.toml
app/api/src/ticketing_api/: __main__.py  main.py  observability.py  settings.py
app/api/src/ticketing_api/domain/: models.py
app/api/src/ticketing_api/infrastructure/: __init__.py  database.py  keyvault.py  redis_client.py  servicebus.py
app/api/src/ticketing_api/repositories/: bookings.py  events.py  orm.py  reservations.py
app/api/src/ticketing_api/routes/: __init__.py  bookings.py  error_handlers.py  events.py  reservations.py  schemas.py
app/api/src/ticketing_api/services/: bookings.py  exceptions.py  locks.py  reservations.py
app/api/tests/unit/: test_app_factory.py  test_reservation_service.py  test_routes.py
docs/: architecture.md  diagram.py
docs/decisions/: 0001-record-architecture-decisions.md  0002-use-postgresql.md  0003-network-design.md  0004-workload-identity-per-service.md  0005-aks-cluster-design.md  0006-observability-design.md  0007-postgres-design.md  0008-redis-design.md  0009-servicebus-design.md  0010-keyvault-design.md  README.md
docs/runbooks/: deploy-rollback.md  disaster-recovery.md  incident-response.md
terraform/environments/uksouth-primary/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/aks/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/data/keyvault/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/data/postgres/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/data/redis/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/data/servicebus/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/identity/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/network/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/observability/: README.md  main.tf  outputs.tf  variables.tf
terraform/shared/acr/: backend.tf  main.tf  outputs.tf  variables.tf
